tests/NormalTests/paczka1/fuzzy1/75859617.err
Error in line 6: SMRzK1aYxeq S197 -3,9
Error in line 3: SMRzK1aYxeq S197 53,3
Error in line 8: S432 S432 59,8
Error in line 10: SMRzK1aYxeq S432 92,0
Error in line 11: S432 S43 59,3
Error in line 25: zGMF S2 77,3
Error in line 26: 3o5fTJe0Vam S2 90,9
Error in line 24: SMRzK1aYxeq S2 20,6
